algumas tags fechadas nos lugares certos

--- a/site vitaminas/arquivos/Index.html
+++ b/site vitaminas/arquivos/Index.html
@@ -16,14 +16,11 @@
 <body>
 
 <div>
-
-	
-
 <section class="principal">
 <h2>Vitaminas saudaveis do Kaique Peça ja sua Vitamina </h2>!!!
 <form action="#" method="post">
 		<input type= "text" name= "busca" id = "busca" placeholder="o que voce procura" required>
-	<button type="buscar"><i class="fas-fa search"></button>i></button>
+	<button type="buscar"><i class="fas-fa search"></i></button>
 	</form>
 	</div>
 <nav class="menu">
@@ -32,7 +29,8 @@
 <a href="Contato II"></a>Contato II</a> 
 
 <a href="Contato II"></a>Quem Somos</a> 
-<header >
+</nav>
+
 
 <div id="formulario">
 
@@ -47,7 +45,7 @@
 
 	
 	
-	</nav>
+	
 
 </section>
 
@@ -95,17 +93,18 @@
 </div>
 
 <div class="produto1"> </br>
-<img src="../imagens/limão.jpg" alt="imagem nao disponivel"
+<img src="../imagens/limão.jpg" alt="imagem nao disponivel">
 <br> <h1>Suco de limão</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:30,00</h2></br>
 </div>
 
 <div class="produto1"> </br>
-<img src="../imagens/maracuja.jpg" alt="imagem nao disponivel"
+<img src="../imagens/maracuja.jpg" alt="imagem nao disponivel">
 <br> <h1>Suco de maracuja</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:40,00</h2></br>
 </div>
+</body>
 </html>
 
