--- a/site vitaminas/arquivos/Vitamina.html
+++ b/site vitaminas/arquivos/Vitamina.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaique Detonado</title>
-	<link rel="stylesheet" href= "site2.css"
+	<link rel="stylesheet" href= "site2.css">
 	
 </head>
 
@@ -53,56 +53,56 @@
 
 
 <div class="produto1"> 
-<img src="imgs/suco01.jpg" alt="imagem nao disponivel">
+<img src="../imagens/suco01.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de morango</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:40,00</h2></br>
 </div>
 
 <div class="produto1"> 
-<img src="imgs/sucouva.jpg" alt="imagem nao disponivel">
+<img src="../imagens/sucouva.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de uva </h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:20,00</h2></br>
 </div>
 
 <div class="produto1"> 
-<img src="imgs/abacaxi.jpg" alt="imagem nao disponivel">
+<img src="../imagens/abacaxi.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de Abacaxi </h1><br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:20,00</h2>br>
 </div>
 
 <div class="produto1"> 
-<img src="imgs/melancia.jpg" alt="imagem nao disponivel">
+<img src="../imagens/melancia.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de melancia</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:10,00</h2></br>
 </div>
 
 <br><div class="produto1"> </br>
-<img src="imgs/hort.jpg" alt="imagem nao disponivel">
+<img src="../imagens/hort.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de hortelã </h1><br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:20,00</h2></br>
 </div>
 
 <div class="produto1"> </br>
-<img src="imgs/tang.jpg" alt="imagem nao disponivel">
+<img src="../imagens/tang.jpg" alt="imagem nao disponivel">
 <br><h1> Suco de tangerina </h1><br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:30,00</h2></br>
 </div>
 
 <div class="produto1"> </br>
-<img src="imgs/limão.jpg" alt="imagem nao disponivel">
+<img src="../imagens/limão.jpg" alt="imagem nao disponivel">
 <br> <h1>Suco de limão</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:30,00</h2></br>
 </div>
 
 <div class="produto1"> </br>
-<img src="imgs/maracuja.jpg" alt="imagem nao disponivel">
+<img src="../imagens/maracuja.jpg" alt="imagem nao disponivel">
 <br> <h1>Suco de maracuja</h1> <br>
 <br> <button> <h3>adicionar ao carrinho<h3></button></br>
 <br> <h2>RS:40,00</h2></br>
