--- a/site vitaminas/arquivos/projeto3.html
+++ b/site vitaminas/arquivos/projeto3.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaique Detonado</title>
-	<link rel="stylesheet" href= "vitamina.css"
+	<link rel="stylesheet" href= "vitamina.css">
 	
 </head>
 
@@ -26,7 +26,7 @@
 	</header>
 
 <header id="header1">	
-<img src="Vitaminas3.png" width="90%" weight="600px">
+<img src="../imagens/Vitaminas3.png" width="90%" weight="600px">
 </div>
 </header>
 
